--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <svg class="logo" viewBox="0 0 600 200" xmlns="http://www.w3.org/2000/svg">
+    <svg class="logo" viewBox="0 0 600 200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
         <text x="300" y="130" font-family="Arial Black, sans-serif" font-size="90" font-weight="900" text-anchor="middle" letter-spacing="-5">
             <tspan fill="#FF0000">X</tspan><tspan fill="#000000">CON</tspan>
         </text>
