--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,10 @@
-<div class="container">
-    <svg class="logo" viewBox="0 0 600 200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
+<div class="xcon-fixed xcon-inset-0 xcon-flex xcon-flex-column-center xcon-overflow-hidden">
+    <svg class="xcon-w-full" style="max-width: 600px; height: auto;" viewBox="0 0 600 200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
         <text x="300" y="130" font-family="Arial Black, sans-serif" font-size="90" font-weight="900" text-anchor="middle" letter-spacing="-5">
             <tspan fill="#FF0000">X</tspan><tspan fill="#000000">CON</tspan>
         </text>
     </svg>
-    <div class="slogan">
+    <div class="xcon-text-2xl xcon-font-semibold xcon-text-center xcon-text-secondary xcon-mt-md">
         Write Once, Run Everywhere
     </div>
 </div>
